fixed line spacing

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -98,9 +98,9 @@ footer{
 }
 
 .carousel{
-    margin:80px 0 0 0;
+    margin:20px 0 0 0;
     width: 100%;
-    height:30em;
+    height:40em;
     position:relative;
     overflow:hidden;
     
@@ -112,7 +112,8 @@ footer{
     }
     
     img{
-        width:100%;    
+        width:100%;
+        
     }
 }
 
@@ -121,14 +122,14 @@ footer{
     width:100%;
     padding-top: 5em;
     margin-bottom: -0.5em;
-    height: 30em;
+    height: 35em;
     display:block;
     background-position:center;
     
 }
 
 .fixedImage{
-    background:url("../images/IllinoisQuad.jpg") no-repeat;
+    background:url("../images/UIUC_alma_mater.jpg") no-repeat;
     background-size:100%;
     width:100%;
     margin:0;
@@ -156,6 +157,7 @@ div.mainbody {
 
     p{
         margin-bottom: 24px;
+        line-height: 150%;
     }
 }
 
